# past_questions_bot

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Dockerfile.yaml  Procfile  README.md  alembic.ini  app.db  app.py  bot.py  docker-compose-development.yaml  docker-compose.yml  docker.compose.prod.yml  litestream.yml  log.ini  names.py  past_questions_bot.db  past_questions_bot.db-shm  past_questions_bot_test.db  pre-commit-config.yaml  pybot.ini  pyproject.toml  pytest.ini  pyvenv.cfg  readme.md  redis.conf  render-build.sh  requirements-dev.txt  requirements.txt  run.sh  run_dev.sh  runtime.txt  temp1.py  test.py
.github/workflow/: fly.yml
.github/workflows/: build.yml  ci-cd.yml  pybot_test.yml
.past_questions_bot.db-litestream/: generation
credentials/: credentials.txt  token.txt
main/: bot.py  functions.py  test.py
pasco-bot/: README.md  bot.py  past_questions.db  pyproject.toml
past_question_bot/: constant.py  helpers.py  main.py  s3_helper.py
scripts/: lint.sh  names.py  test.py  test.sh
src/: api_service.py  callback_queries_handlers.py  command_handlers.py  config.py  error_handler.py  filters.py  functions.py  helpers.py  main.py  message_handlers.py  model.py  scraper.py  strings.py
src/api/: main.py
src/api/dependencies/: auth.py  database.py
src/api/routes/: download.py  help_ticket.py  past_question.py  paystack.py  subscription.py  subscription_history.py  user.py
src/core/: config.py  tasks.py
src/database/: __init__.py  database.py  scapper.py
src/db/: setup.py  tasks.py
src/db/migrations/: env.py
src/db/repositories/: base.py  downloads.py  help_tickets.py  past_question.py  past_question_categories.py  past_questions.py  subscriptions.py  subscriptions_history.py  user.py  users.py
src/functions/: __init__.py  responses.py
src/models/: base.py  downloads.py  help_ticket_status_enum.py  help_tickets.py  past_question.py  past_question_category.py  past_question_filter_enum.py  past_questions.py  paystack.py  subscriptions.py  subscriptions_history.py  user.py  users.py
src/services/: paystack.py  s3.py  scraper.py  sentry.py
src/services/db/: database.py
src/utils/: add_updated_at.py  generate_pasco_unique_code.py  pasco_file_name.py  path_separator.py  redis_serializers.py  uuid.py
tests/: conftest.py
tests/app/: conftest.py  test_subscription_history_route.py  test_subscription_route.py  test_user_route.py
tests/database/: conftest.py  test_download.py  test_past_question.py  test_past_question_categories.py  test_subscription.py  test_subscription_history.py  test_user.py
tests/paystack/: conftest.py  test_paystack.py
tests/s3/: conftest.py  mock_file.txt  test_s3_functions.py
tests/scraper/: helpers.py  test_scraper_integration.py  test_scraper_unit.py
thebot/: bot.py  credentials.py
utils/: uuid.py
(+5 files in other folders)
