[tool.poetry]
name = "past-question-bot"
version = "0.1.0"
description = "past-question-bot"
authors = ["Christian Abrokwa", "Emile Bondzie-Arthur <frederickauthur@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.2"
beautifulsoup4 = "^4.12.2"
webdriver-manager = "^3.8.6"
selenium = "^4.9.0"
requests = "^2.28.2"
lxml = "^4.9.2"
mypy-boto3-s3 = "^1.26.116"


[tool.poetry.dev-dependencies]
boto3 = "^1.26.89"
pytest = "^7.2.1"
black = "^23.1.0"
mypy = "^1.0.1"
coverage = "^7.2.1"
watchfiles = "^0.18.1"
pylint = "^2.16.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev-dependencies.dependencies]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["past_question_bot"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = ["pass", "pragma: no cover", "\\.\\.\\."]
omit = ["past_question_bot/main.py"]

[tool.pylint.basic]
# Allow shorter and longer variable names than the default.
argument-rgx = "[a-z_][a-z0-9_]*$"
attr-rgx = "[a-z_][a-z0-9_]*$"
variable-rgx = "[a-z_][a-z0-9_]*$"
max-line-length=140

[tool.pylint.messages_control]
disable = ["R0903", "R0801", "W1203", "C0414", "C0116", "C0115", "E0601", "R0913", "C0114"]
extension-pkg-whitelist = "pydantic"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_no_return = false
implicit_reexport = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
