[tool.poetry]
name = "past-questions-bot"
version = "0.1.0"
description = ""
authors = ["Christian Abrokwa <Cabrokwa11@gmail.com>"]
readme = "README.md"
packages = [{include = "past_questions_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {extras = ["webhooks"], version = "^20.3"}
beautifulsoup4 = "^4.12.2"
webdriver-manager = "^3.8.6"
selenium = "^4.9.1"
requests = "^2.31.0"
lxml = "^4.9.2"
databases = {extras = ["aiosqlite"], version = "^0.7.0"}
alembic = "^1.11.1"
pydantic = "^1.10.8"
pytest-asyncio = "^0.21.0"
boto3 = "^1.26.142"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
